vlib/v/checker/tests/or_block_u64_to_f64_err.vv
import strconv

fn main() {
	mut num := f64(0.0)
	num = strconv.atof64('x') or { strconv.double_minus_infinity }
	println(num)
}
